# diditland

./: .gitignore  README.md  flow.md  pyproject.toml  server.py
aws_assistant/: __init__.py  utils.py
aws_assistant/services/: ecr.py  github.py
aws_assistant/tools/: component.py  deployment.py
diditland/: __init__.py  config.py  utils.py
diditland/services/: ecr.py  github.py
diditland/tools/: component.py  deployment.py
